--- a/package.json
+++ b/package.json
@@ -57,6 +57,13 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.6.0",
+		"@fortawesome/fontawesome-svg-core": "^6.6.0",
+		"@fortawesome/free-regular-svg-icons": "^6.6.0",
+		"@fortawesome/react-fontawesome": "^0.2.2",
+		"bootstrap": "^5.3.3",
+		"fontawesome": "^5.6.3",
+		"node-sass": "^9.0.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.3.1",
